--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,9 @@
   "description": "A Chrome extension for Amazon Rewards",
   "permissions": [
     "activeTab",
-    "scripting"
+    "scripting",
+    "storage",
+    "alarms"
   ],
   "host_permissions": [
     "https://www.amazon.com/*"
