--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "activeTab",
     "scripting",
     "storage",
-    "alarms"
+    "alarms",
+    "cookies"
   ],
   "host_permissions": [
     "https://www.amazon.com/*"
