--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
     "cookies"
   ],
   "host_permissions": [
-    "https://www.amazon.com/*"
+    "https://www.amazon.com/*",
+    "file:///*"
   ],
   "action": {
     "default_popup": "popup.html",
